# pr-review-app

./: .gitignore  README.md
backend/: PR-Review-App.spec  build_sidecar.py  desktop_launcher.py  pyproject.toml
backend/app/: config.py  database.py  log_buffer.py  main.py
backend/app/models/: __init__.py  pr_review.py  rule_set.py  settings.py
backend/app/routers/: __init__.py  reviews.py  rule_sets.py  settings.py
backend/app/schemas/: __init__.py  pr_review.py  rule_set.py  settings.py
backend/app/services/: __init__.py  base_service.py  github_service.py  gitlab_service.py  llm_service.py  pr_agent_service.py  provider_factory.py
frontend/: index.html  package-lock.json  package.json
frontend/keys/: readme.md
frontend/src/: App.jsx  index.css
frontend/src-tauri/: .gitignore  .taurignore  2  Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs
frontend/src/components/: ChatDrawer.jsx  DiffView.jsx  Layout.jsx  PRDescriptionViewer.jsx  PRDetail.jsx  PRForm.jsx  PRHistory.jsx  RuleSets.jsx  Settings.jsx  SuggestionCard.jsx
frontend/src/services/: api.js
frontend/src/utils/: exportUtils.js  link.js
